--- a/suspicions.ipynb
+++ b/suspicions.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b924d90c",
+   "execution_count": 10,
+   "id": "15f896d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and libraries\n",
     "import pandas as pd\n",
     "import matplotlib as plt\n",
+    "import scipy\n",
     "\n",
     "from config import SQL_password\n",
     "from sqlalchemy import create_engine\n",
@@ -19,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eab07452",
+   "execution_count": 12,
+   "id": "f0e6b7c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c47ddb47",
+   "execution_count": 14,
+   "id": "d13654a1",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +131,7 @@
        "9   10010   72488"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "426021c5",
+   "execution_count": 15,
+   "id": "377a8686",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
        "Name: salary, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9f21101c",
+   "execution_count": 16,
+   "id": "66ebb745",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
        "Text(0, 0.5, 'Number of employees')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -222,18 +223,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6030e04",
+   "id": "f749e79e",
    "metadata": {},
    "source": [
     "# Insight\n",
     "\n",
-    "Hmm, perfect distribution?, looks inverse logarithmic, maybe too perfect"
+    "Hmm, perfect distribution?, looks exponential, maybe too perfect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a5d3e92d",
+   "execution_count": 17,
+   "id": "3f07c142",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +243,7 @@
        "Text(0, 0.5, 'Average Salary')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305d7978",
+   "id": "d884b107",
    "metadata": {},
    "source": [
     "# *Insight*\n",
@@ -293,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cfd414c4",
+   "execution_count": 18,
+   "id": "a0e2a644",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
        "168736  499942  Foolsday      April"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e944da",
+   "id": "21310421",
    "metadata": {},
    "outputs": [],
    "source": []
